Cold Call & Honours Project

--- a/index.html
+++ b/index.html
@@ -77,17 +77,39 @@
 									</ul>
 								</article>
 
-								<section class="posts">
-									<article>
-										<header>
-											<h2><a href="CNN.html">Image Upscaling using a Convolutional Neural Network </a></h2>
-										</header>
-										<a href="#" class="image main"><img src="images/CNN.png" alt="" /></a>
-										<p>A group project in which Neural Networks are investigated in order to create a Convolutional Neural Network which is used to upscale low resolution game textures.</p>
-										<ul class="actions special">
-											<li><a href="CNN.html" class="button large">View Project</a></li>
-										</ul>
-									</article>
+								
+								<article>
+									<header>
+										<h2><a href="CNN.html">Image Upscaling using a Convolutional Neural Network </a></h2>
+									</header>
+									<a href="CNN.html" class="image main"><img src="images/CNN.png" alt="" /></a>
+									<p>A group project in which Neural Networks are investigated in order to create a Convolutional Neural Network which is used to upscale low resolution game textures.</p>
+									<ul class="actions special">
+										<li><a href="CNN.html" class="button large">View Project</a></li>
+									</ul>
+								</article>
+
+								<article>
+									<header>
+										<h2><a href="Honours.html">Using Mobile VR to test Hazard Perception</a></h2>
+									</header>
+									<a href="Honours.html" class="image main"><img src="images/HonoursImage.png" alt="" /></a>
+									<p>My Honours Project which experiments with the use of Mobile VR to train and test a users driving hazard perception.</p>
+									<ul class="actions special">
+										<li><a href="Honours.html" class="button large">View Project</a></li>
+									</ul>
+								</article>
+
+								<article>
+									<header>
+										<h2><a href="ColdCall.html">Cold Call</a></h2>
+									</header>
+									<a href="ColdCall.html" class="image main"><img src="images/ColdCall.png" alt="" /></a>
+									<p>Working with a team to participate in the Global Game Jam 2021 to create a game around the theme “Lost & Found”.</p>
+									<ul class="actions special">
+										<li><a href="ColdCall.html" class="button large">View Project</a></li>
+									</ul>
+								</article>
 
 								
 							</section>
