--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<footer id="footer">
 						<!-- TODO: Make Form Work
 						<section>
-							<form method="post" action="assets/js/jquery.min.js">
+							<form method="post" action="mailto:goodmanc1998@gmail.com">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
