--- a/CNN.html
+++ b/CNN.html
@@ -26,7 +26,7 @@
 				<nav id="nav">
 					<ul class="links">
 						<li class="active"><a href="index.html">My Projects</a></li>
-						<li><a href="generic.html">About Me</a></li>
+						<li><a href="about.html">About Me</a></li>
 					</ul>
 					<ul class="icons">
 						<li><a href="https://github.com/Goodmanc1998" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
